<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/text"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/text"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:textColor="@color/text"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/text"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/b_add"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/text"
        android:background="@color/background"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/b_remove"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:textColor="@color/text"
        android:background="@color/background"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="5">


        <Button
            android:id="@+id/b_edit_data"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/text"
            android:background="@color/background"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/b_delete_data"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/text"
            android:background="@color/background"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>