<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



        <TextView
            android:id="@+id/tv_code_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_name_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/b_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@color/background"
            android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/tv_place_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/tv_number_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:inputType="number"/>

        <Button
            android:id="@+id/b_add_new"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/text"
            android:background="@color/background"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="50dp" />

    </LinearLayout>
