<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:textColor="@color/text"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:textColor="@color/text"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/b_signin"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/text"
        android:background="@color/background"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/b_registration"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/text"
        android:background="@color/background"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>