<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

        <TextView
            android:id="@+id/tv_code_edit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_code_edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/tv_name_edit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_name_edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/tv_place_edit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="@color/text"
            android:padding="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_place_edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"/>


        <Button
            android:id="@+id/b_save"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/text"
            android:background="@color/background"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="50dp" />

    </LinearLayout>